Some new features and fixes
New: Loads apps & bots from CB
New: Loads apps & bots from files
New: Show script errors on chat
New: Show number of users
Fix: Set cam settings only when activated
Fix: Minor bugs

--- a/testbed/index.html
+++ b/testbed/index.html
@@ -370,6 +370,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <input id="app_js_file" type="file" style="display: none" accept="application/javascript"/>
                                     <br><a id="suggest_app" class="toolbar_popup_link nextcam">Suggest an App Idea <img src="cb/images/arrow-right.png"></a>
                                 </div>
                             </div>
